Add support for indexing columns via schema config.

--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -488,9 +488,12 @@ classes:
         required: true
         annotations:
           mutable: false
+          indexed: true
       value:
         range: string
         required: true
+        annotations:
+          indexed: true
     annotations:
       plural: Metadatas
 
@@ -639,11 +642,14 @@ classes:
         range: string
       common_name:
         range: string
+        annotations:
+          indexed: true
       name:
         range: string
         required: true
         annotations:
           mutable: false
+          indexed: true
       is_phage:
         range: boolean
         required: true
@@ -700,6 +706,8 @@ classes:
       name:
         range: string
         required: true
+        annotations:
+          indexed: true
       taxa:
         range: Taxon
         inverse: Taxon.upstream_database
