[CZID-9006] Entity deletion (#189)
* Add file event

* Codegen: add cascade deletion in DB models

* Remove deleted_at from workflows

* Set separate path on S3 for files managed by NextGen

* Update test schema

* Add test for cascade deletions

* Re-run codegen

--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -185,9 +185,6 @@ classes:
       updated_at:
         range: date
         readonly: true
-      deleted_at:
-        range: date
-        readonly: true
     # NOTE - the LinkML schema doesn't support a native "plural name" field as far as I can tell, so
     # we're using an annotation here to tack on the extra functionality that we need. We do this because
     # English pluralization is hard, and we don't want to have to write a custom pluralization function.
@@ -290,10 +287,14 @@ classes:
         range: SequencingRead
         multivalued: true
         inverse: SequencingRead.sample
+        annotations:
+          cascade_delete: true
       metadatas:
         range: Metadatum
         inverse: Metadatum.sample
         multivalued: true
+        annotations:
+          cascade_delete: true
     annotations:
       plural: Samples
 
@@ -320,9 +321,13 @@ classes:
       r1_file:
         range: File
         readonly: true
+        annotations:
+          cascade_delete: true
       r2_file:
         range: File
         readonly: true
+        annotations:
+          cascade_delete: true
       # Which sequencing technology / instrument was used?
       technology:
         range: SequencingTechnology
@@ -357,6 +362,8 @@ classes:
         range: ConsensusGenome
         inverse: ConsensusGenome.sequence_read
         multivalued: true
+        annotations:
+          cascade_delete: true
     annotations:
       plural: SequencingReads
 
@@ -371,6 +378,8 @@ classes:
       file:
         range: File
         readonly: true
+        annotations:
+          cascade_delete: true
       sequencing_reads:
         range: SequencingRead
         inverse: SequencingRead.primer_file
@@ -390,6 +399,8 @@ classes:
       file:
         range: File
         readonly: true
+        annotations:
+          cascade_delete: true
       name:
         range: string
         required: true
@@ -461,6 +472,8 @@ classes:
       sequence:
         range: File
         readonly: true
+        annotations:
+          cascade_delete: true
       # Samples that obtained from this host organism
       samples:
         range: Sample
@@ -537,6 +550,8 @@ classes:
       sequence:
         readonly: true
         range: File
+        annotations:
+          cascade_delete: true
       # Metrics output by CG pipeline
       metrics:
         range: MetricConsensusGenome
@@ -545,10 +560,14 @@ classes:
         # class actually defines the relationship and this is just a virtual field. We're misusing the LinkML
         # "inlined" field property until we learn how to use LinkML better and find a better way to express this
         inlined: true
+        annotations:
+          cascade_delete: true
       # Zip file containing intermediate outputs file output by CG pipeline
       intermediate_outputs:
         range: File
         readonly: true
+        annotations:
+          cascade_delete: true
     annotations:
       plural: ConsensusGenomes
 
@@ -746,6 +765,8 @@ classes:
         range: File
         required: true
         readonly: true
+        annotations:
+          cascade_delete: true
       # Links to either upstream database or host organism
       upstream_database:
         range: UpstreamDatabase
@@ -772,6 +793,8 @@ classes:
       tree:
         range: File
         readonly: true
+        annotations:
+          cascade_delete: true
       format:
         range: PhylogeneticTreeFormat
         required: true
@@ -795,6 +818,8 @@ classes:
       file:
         range: File
         readonly: true
+        annotations:
+          cascade_delete: true
     annotations:
       plural: BulkDownloads
 
