increase header size

--- a/entities/etc/nginx.conf
+++ b/entities/etc/nginx.conf
@@ -34,6 +34,8 @@ http {
     listen 8008 deferred;
     client_max_body_size 4G;
 
+    large_client_header_buffers 4 24k;
+
     keepalive_timeout 60;
 
     location / {
