--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -109,11 +109,6 @@ enums:
       level_phylum:
       level_kingdom:
       level_superkingdom:
-  PhylogeneticTreeFormat:
-    permissible_values:
-      newick:
-      auspice_v1:
-      auspice_v2:
   BulkDownloadType:
     permissible_values:
       concatenate:
@@ -360,7 +355,7 @@ classes:
       # Consensus Genomes generated from these Sequencing Reads
       consensus_genomes:
         range: ConsensusGenome
-        inverse: ConsensusGenome.sequence_read
+        inverse: ConsensusGenome.sequencing_read
         multivalued: true
         annotations:
           cascade_delete: true
@@ -468,12 +463,6 @@ classes:
         range: IndexFile
         inverse: IndexFile.host_organism
         multivalued: true
-      # Original reference FASTA file used to generate indexes for this host; used for our record keeping
-      sequence:
-        range: File
-        readonly: true
-        annotations:
-          cascade_delete: true
       # Samples that obtained from this host organism
       samples:
         range: Sample
@@ -529,7 +518,7 @@ classes:
         annotations:
           mutable: false
       # Which SequencingRead this ConsensusGenome was created from
-      sequence_read:
+      sequencing_read:
         range: SequencingRead
         required: true
         inverse: SequencingRead.consensus_genomes
@@ -782,24 +771,6 @@ classes:
       plural: IndexFiles
 
 
-  # ----------------------------------------------------------------------------
-  # Phylogenetic tree
-  # ----------------------------------------------------------------------------
-  PhylogeneticTree:
-    is_a: Entity
-    mixins:
-      - EntityMixin
-    attributes:
-      tree:
-        range: File
-        readonly: true
-        annotations:
-          cascade_delete: true
-      format:
-        range: PhylogeneticTreeFormat
-        required: true
-    annotations:
-      plural: PhylogeneticTrees
 
 
   # ----------------------------------------------------------------------------
@@ -812,6 +783,11 @@ classes:
     attributes:
       download_type:
         range: BulkDownloadType
+        required: true
+        annotations:
+          mutable: false
+      download_display_name:
+        range: string
         required: true
         annotations:
           mutable: false
