--- a/workflows/etc/nginx.conf
+++ b/workflows/etc/nginx.conf
@@ -34,6 +34,9 @@ http {
     listen 8042 deferred;
     client_max_body_size 4G;
 
+    client_header_buffer_size 4k;
+    large_client_header_buffers 4 64k;
+
     keepalive_timeout 60;
 
     location / {
