--- a/entities/cerbos/policies/derived_roles_common.yaml
+++ b/entities/cerbos/policies/derived_roles_common.yaml
@@ -10,6 +10,14 @@ derivedRoles:
         match:
           expr: request.resource.attr.owner_user_id == request.principal.attr.user_id
 
+    - name: project_owner
+      parentRoles: ["user"]
+      condition:
+        match:
+          any:
+            of:
+              - expr: request.resource.attr.collection_id in request.principal.attr.owner_projects
+
     - name: project_member
       parentRoles: ["user"]
       condition:
@@ -17,7 +25,7 @@ derivedRoles:
           any:
             of:
               - expr: request.resource.attr.collection_id in request.principal.attr.member_projects
-              - expr: request.resource.attr.collection_id in request.principal.attr.admin_projects
+              - expr: request.resource.attr.collection_id in request.principal.attr.owner_projects
 
     - name: project_viewer
       parentRoles: ["user"]
