--- a/platformics/Makefile
+++ b/platformics/Makefile
@@ -89,7 +89,7 @@ local-tests: ## Run tests
 
 .PHONY: local-token
 local-token: ## Copy an auth token for this local dev env to the system clipboard
-	TOKEN=$$($(docker_compose_run) $(FOLDER) ../platformics/cli/generate_token.py auth generate-token 111 --project 444:admin --expiration 99999); echo '{"Authorization":"Bearer '$$TOKEN'"}' | tee >(command -v pbcopy >/dev/null && pbcopy || xclip -selection clipboard)
+	TOKEN=$$($(docker_compose_run) $(FOLDER) ../platformics/cli/generate_token.py auth generate-token 111 --project 444:owner --expiration 99999); echo '{"Authorization":"Bearer '$$TOKEN'"}' | tee >(command -v pbcopy >/dev/null && pbcopy || xclip -selection clipboard)
 
 .PHONY: fix-lint
 fix-lint: ## Apply linting rules to the code in this directory.
