[CZID-9324] Update data model for workflow run deletions

--- a/workflows/schema/workflows.yaml
+++ b/workflows/schema/workflows.yaml
@@ -120,10 +120,14 @@ classes:
         range: WorkflowRunStep
         multivalued: true
         inverse: WorkflowRunStep.workflow_run
+        annotations:
+          cascade_delete: true
       entity_inputs:
         range: WorkflowRunEntityInput
         multivalued: true
         inverse: RunEntityInput.workflow_run
+        annotations:
+          cascade_delete: true
       raw_inputs_json:
         range: string
         annotations:
