--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -22,9 +22,9 @@ x-redis-variables: &redis-variables
   ? PLATFORMICS_EVENT_BUS__REDIS__QUEUE_NAME=workflow-events
   
 x-workflow-variables: &workflow-variables
-  ? ENVIRONMENT
+  ? ENVIRONMENT=test
   ? SERVICE_IDENTITY_SECRET_NAME=dev/czid-workflows-service-identity-token
-  ? IDENTITY_SERVICE_URL=http://web.czidnet:3001
+  ? IDENTITY_SERVICE_BASE_URL=http://localhost:3001
   ? BOTO_ENDPOINT_URL=http://motoserver.czidnet:4000
   ? ENTITY_SERVICE_URL=http://entities.czidnet:8008
   ? DEFAULT_UPLOAD_BUCKET=local-bucket
