--- a/workflows/.happy/config.json
+++ b/workflows/.happy/config.json
@@ -74,6 +74,11 @@
                                 "tag": "0.29.0"
                             }
                         }
+                    }, 
+                    "workflows-worker": {
+                        "cpu": "2",
+                        "memory": "1000Mi",
+                        "service_type": "INTERNAL"
                     }
                 },
                 "source": "git@github.com:chanzuckerberg/happy//terraform/modules/happy-stack-eks?ref=rlim/ephemeral-volume-support",
@@ -114,10 +119,10 @@
                     "PLATFORMICS_EVENT_BUS_PLUGIN": "swipe",
                     "PLATFORMICS_EVENT_BUS__REDIS__QUEUE_NAME": "workflow-events",
                     "PLATFORMICS_EVENT_BUS__REDIS__REDIS_URL": "redis://redis.czidnet:6378",
-                    "PLATFORMICS_EVENT_BUS__SWIPE__SQS_QUEUE_URL": "https://sqs.us-west-2.amazonaws.com/732052188396/idseq-swipe-dev-web-sfn-notifications-queue",
+                    "PLATFORMICS_EVENT_BUS__SWIPE__SQS_QUEUE_URL": "https://sqs.us-west-2.amazonaws.com/732052188396/idseq-swipe-sandbox-web-sfn-notifications-queue",
                     "PLATFORMICS_WORKFLOW_RUNNER_PLUGIN": "swipe",
                     "PLATFORMICS_WORKFLOW_RUNNER__LOCAL__S3_ENDPOINT": "",
-                    "PLATFORMICS_WORKFLOW_RUNNER__SWIPE__OUTPUT_S3_PREFIX": "s3://idseq-samples-development/nextgen/",
+                    "PLATFORMICS_WORKFLOW_RUNNER__SWIPE__OUTPUT_S3_PREFIX": "s3://idseq-samples-sandbox/nextgen/",
                     "PLATFORMICS_WORKFLOW_RUNNER__SWIPE__STATE_MACHINE_ARN": "arn:aws:states:us-west-2:732052188396:stateMachine:idseq-swipe-sandbox-default-wdl",
                     "SERVICE_NAME": "workflows",
                     "WORKERS": "2"
@@ -208,7 +213,8 @@
         ]
     },
     "services": [
-        "workflows"
+        "workflows", 
+        "workflows-worker"
     ],
     "features": {
         "enable_dynamo_locking": true,
