--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -35,10 +35,10 @@ types:
     base: str
     description: A UUID
 
-  Array2dInt:
+  Array2dFloat:
     uri: xsd:array
-    base: int
-    description: A 2D array of integers, e.g. [[1, 2, 3], [4, 5, 6]]
+    base: float
+    description: A 2D array of floats, e.g. [[1.0, 2.0, 3.0], [4.0, 5.0, 6.0]]
 
 enums:
   FileStatus:
@@ -642,7 +642,7 @@ classes:
         annotations:
           mutable: false
       coverage_viz:
-        range: Array2dInt
+        range: Array2dFloat
         annotations:
           mutable: false
     annotations:
