--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -27,7 +27,7 @@ boto3 = "^1.28.12"
 semver = "^3.0.1"
 sgqlc = "^16.3"
 psycopg-binary = "^3.1.10"
-gql = { extras = ["all"], version = "^3.4.1" }
+gql = {version = "^3.5.0", extras = ["all"]}
 pydantic = "^2.3.0"
 cerbos = "^0.10.1"
 jwcrypto = "^1.5.1"
