--- a/workflows/manifest/test_manifests/valid_multivalue.yaml
+++ b/workflows/manifest/test_manifests/valid_multivalue.yaml
@@ -6,11 +6,11 @@ entity_inputs:
     name: Sample
     description: Your sample
     entity_type: sample
-  sequencing_read:
-    name: Sequencing Read
-    description: Your sequencing read
+  sequencing_reads:
+    name: Sequencing Reads
+    description: Your sequencing reads
     entity_type: sequencing_read
-    multivalued: True
+    multivalue: True
 input_loaders:
   - name: sample
     version: ">=0.0.1"
@@ -18,19 +18,13 @@ input_loaders:
       sample: ~
     outputs:
       name: sample
-  - name: kindness
+  - name: sequencing_reads
     version: ">=0.0.1"
     inputs:
-      sequencing_read: ~
-      mood: ~
-      ranking: ~
+      sequencing_reads: ~
     outputs:
-      kindness_level: ~
-      smile_ratio: observed_mood
-  - name: docker_image
-    version: ">=0.0.1"
-    outputs:
-      docker_image_id: ~
+      r1: ~
+      r2: ~
 output_loaders:
   - name: sequencing_read
     version: ">=0.0.1"
