use ecr base image

--- a/entities/Dockerfile
+++ b/entities/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim-bookworm AS build
+FROM public.ecr.aws/docker/library/python:3.11-slim-bookworm AS build
 RUN apt-get update && \
     apt-get install -y vim wget nginx nginx-extras procps ripgrep make gcc && \
     apt-get clean
