--- a/entities/docker-compose.yml
+++ b/entities/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   entities-db:
-    image: postgres:15
+    image: public.ecr.aws/docker/library/postgres:15
     restart: always
     environment:
       - POSTGRES_USER=postgres
