--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -13,7 +13,7 @@ run-name: Deploy ${{ github.event.inputs.service }} to sandbox
 jobs:
   run-deploy-to-sandbox:
     runs-on: [ARM64, self-hosted, Linux]
-    uses: chanzuckerberg/czid-platformics/.github/workflows/reusable-deploy.yml
+    uses: ./.github/workflows/reusable-deploy.yml
     environment: sandbox
     with:
       environment: sandbox
