--- a/.github/workflows/deploy-to-sandbox.yml
+++ b/.github/workflows/deploy-to-sandbox.yml
@@ -16,4 +16,5 @@ jobs:
     with:
       environment: sandbox
       service: ${{ github.event.inputs.service }}
+      developer_name: ${{ github.actor }}
     secrets: inherit
