codegen in workflows as well

--- a/platformics/codegen/tests/test_schemas/platformics.yaml
+++ b/platformics/codegen/tests/test_schemas/platformics.yaml
@@ -53,7 +53,7 @@ enums:
       Nanopore:
   TaxonLevel:
     permissible_values:
-      level_subspecies:
+      level_sublevel:
       level_species:
       level_genus:
       level_family:
