--- a/entities/etc/nginx.conf
+++ b/entities/etc/nginx.conf
@@ -22,7 +22,13 @@ http {
                              '"$request" $status $body_bytes_sent '
                              '"$http_referer" "$http_user_agent"'
                              ' rt=$request_time urt=$upstream_response_time';
-  access_log /dev/stdout custom;
+                             
+  map $http_user_agent $loggable {
+    "~^kube-probe/.*$" 0;
+    default 1;
+  }
+
+  access_log /dev/stdout custom if=$loggable;
   sendfile on;
 
   upstream fastapi_server {
