--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -541,7 +541,7 @@ classes:
       # - CG from mNGS: SequencingRead.taxon = null BUT ConsensusGenome.taxon = taxonId chosen from UI
       taxon:
         range: Taxon
-        required: true
+        required: false
         inverse: Taxon.consensus_genomes
         annotations:
           mutable: false
