--- a/entities/.happy/config.json
+++ b/entities/.happy/config.json
@@ -13,6 +13,7 @@
             },
             "terraform_directory": ".happy/terraform/envs/dev",
             "task_launch_type": "k8s",
+            "auto_run_migrations": true,
             "stack_overrides": {
                 "additional_env_vars": {
                     "AWS_REGION": "us-west-2",
@@ -89,6 +90,7 @@
             },
             "terraform_directory": ".happy/terraform/envs/sandbox",
             "task_launch_type": "k8s",
+            "auto_run_migrations": true,
             "stack_overrides": {
                 "additional_env_vars": {
                     "AWS_REGION": "us-west-2",
@@ -165,6 +167,7 @@
             },
             "terraform_directory": ".happy/terraform/envs/staging",
             "task_launch_type": "k8s",
+            "auto_run_migrations": true,
             "stack_overrides": {
                 "services": {
                     "entities": {
