Restrict viewing bulkDownloads to owner only

--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -821,6 +821,7 @@ classes:
           cascade_delete: true
     annotations:
       plural: BulkDownloads
+      custom_policy: true
 
 
   # ============================================================================
