--- a/entities/cerbos/policies/bulk_download.yaml
+++ b/entities/cerbos/policies/bulk_download.yaml
@@ -6,12 +6,7 @@ resourcePolicy:
     - common_roles
   resource: "bulk_download"
   rules:
-    - actions: ['create', 'update']
-      effect: EFFECT_ALLOW
-      derivedRoles:
-        - project_member
-
-    - actions: ['download', 'delete', 'view']
+    - actions: ['*']
       effect: EFFECT_ALLOW
       derivedRoles:
         - owner
