--- a/entities/cerbos/policies/derived_roles_common.yaml
+++ b/entities/cerbos/policies/derived_roles_common.yaml
@@ -34,3 +34,10 @@ derivedRoles:
           any:
             of:
               - expr: request.resource.attr.collection_id in request.principal.attr.viewer_projects
+    
+    - name: bulk_download_owner
+      parentRoles: ["user"]
+      condition:
+        match:
+          - expr: request.resource.attr.owner_user_id == request.principal.attr.user_id
+          - expr: request.resource.attr.collection_id == none
